--- a/style.css
+++ b/style.css
@@ -223,6 +223,10 @@ html {
     font-size: 3rem
 }
 
+.f1 {
+    font-size:1rem;
+}
+
 .lokesh {
     color: #1852ff;
     font-size: 3rem;
@@ -675,6 +679,9 @@ a {
 }
 
 @media(max-width: 768px) {
+    .f1 {
+        font-size:0.6rem;
+    }
     .prodiv {
         flex-direction: column;
         align-items: center;
