--- a/style.css
+++ b/style.css
@@ -814,3 +814,20 @@ a {
         width: fit-content;
     }
 }
+   
+.block .crt .hire .cert-3 #Contact_me {
+    animation: appear linear;
+    animation-timeline: view() ;
+
+}
+@keyframes appear{
+    0%{
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
