--- a/style.css
+++ b/style.css
@@ -815,9 +815,10 @@ a {
     }
 }
    
-.block .crt .hire .cert-3 #Contact_me {
-    animation: appear linear;
-    animation-timeline: view() ;
+.block, .crt, .hire, .cert-3, #Contact_me {
+/*     animation: appear linear;
+    animation-timeline: view() ; */
+    animation: appear 0.5s linear;
 
 }
 @keyframes appear{
