--- a/style.css
+++ b/style.css
@@ -825,7 +825,7 @@ a {
     opacity: 1;
     transform: translateY(0px);
 } */
-.block, .crt, .hire, .cert-3, #Contact_me {
+.block, .crt, .hire, .cert-3 {
     opacity: 0;
     transform: translateY(-50px);
     transition: opacity 0.5s ease, transform 0.5s ease;
