--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ html {
     order: 1;
     font-size: 2.3rem
 }
-.navbar .logo:hover {
+.navbar .Logo:hover {
     color: black;
     transform: translateY(-3px)
    
