--- a/style.css
+++ b/style.css
@@ -602,7 +602,8 @@ a {
 }
 .Projects_main {
     display:flex;
-    justify-content:space-evenly;
+    justify-content:flex-start;
+    align-items:center;
     flex-direction:row;
 }
 
